src/test/run-pass/item-attributes.rs
// xfail-stage0

#[attr = "val"]
mod mod1 {
}

fn main() {
}