src/test/compile-fail/extfmt-unknown-type.rs
// error-pattern:unknown type

fn main() { #ifmt["%w"]; }
